[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/HUD/heart border sh.png" type="Texture" id=2]
[ext_resource path="res://Sprites/KeySprites/sprite_keys00.png" type="Texture" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Hearts" type="Node2D" parent="."]

[node name="Heart4" type="Sprite" parent="Hearts"]
modulate = Color( 0.0705882, 0.0235294, 0.0235294, 1 )
position = Vector2( 39.8051, 49.6376 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )

[node name="Heart1" type="Sprite" parent="Hearts"]
position = Vector2( 39.8051, 49.6376 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )

[node name="Heart5" type="Sprite" parent="Hearts"]
modulate = Color( 0.0705882, 0.0235294, 0.0235294, 1 )
position = Vector2( 83.9051, 49.6376 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )

[node name="Heart2" type="Sprite" parent="Hearts"]
position = Vector2( 83.9051, 49.6376 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )

[node name="Heart6" type="Sprite" parent="Hearts"]
modulate = Color( 0.0705882, 0.0235294, 0.0235294, 1 )
position = Vector2( 127.905, 49.6376 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )

[node name="Heart3" type="Sprite" parent="Hearts"]
position = Vector2( 127.905, 49.6376 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )

[node name="Key" type="Sprite" parent="."]
visible = false
position = Vector2( 41.515, 94.7626 )
scale = Vector2( 4.72282, 4.72282 )
texture = ExtResource( 3 )

